plugins {
    id 'java'
    id 'net.neoforged.moddev' version '2.0.141'
}

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

repositories {
    mavenLocal()
    maven { url = 'https://maven.neoforged.net/releases' }
    maven { url = 'https://maven.architectury.dev/' }
    maven { url = 'https://maven.createmod.net' }
    maven { url = 'https://maven.ithundxr.dev/snapshots' }
    maven { url = 'https://mvn.devos.one/snapshots' }
    maven { url = 'https://cursemaven.com' }
    maven { url = "https://api.modrinth.com/maven" }
}

neoForge {
    version = neoforge_version

    runs {
        client { client() }
        server {
            server()
            programArgument '--nogui'
        }
        data {
            data()
            programArguments.addAll '--all', '--mod', mod_id,
                    '--output', file('src/generated/resources').absolutePath,
                    '--existing', file('src/main/resources').absolutePath
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

sourceSets.main.resources.srcDir 'src/generated/resources'

dependencies {
    implementation "dev.architectury:architectury-neoforge:${architectury_api_version}"
    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") {
        transitive = false
    }
    implementation "net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}"
    compileOnly "dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}"
    runtimeOnly "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}"
    implementation "com.tterrag.registrate:Registrate:${registrate_version}"
    implementation "maven.modrinth:eWiBLJ9R:IhWvpljS"

}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('processResources', ProcessResources).configure {
    def replaceProperties = [
            mod_version            : mod_version,
            minecraft_version_range: minecraft_version_range,
            neoforge_version_range : neoforge_version_range
    ]
    inputs.properties replaceProperties
    filesMatching('META-INF/neoforge.mods.toml') {
        expand replaceProperties
    }
}
